update swagger documentation and fixing
