# handler/rent_handler.go
@@ -33,7 +33,7 @@ func NewRentHandler(rentRepo repository.RentRepository) RentHandler {
 // @Tags rents
 // @Accept json
 // @Produce json
-// @Authorization header string true "Bearer <access_token>"
+// @Param Authorization header string true "Bearer <access_token>"
 // @Param id path int true "Rent ID" // Updated parameter description
 // @Success 200 {object} model.Response
 // @Router /rents/{id} [get]
@@ -97,7 +97,7 @@ func (h *rentHandler) GetRentByID(c echo.Context) error {
 // @Tags rents
 // @Accept json
 // @Produce json
-// @Authorization header string true "Bearer <access_token>"
+// @Param Authorization header string true "Bearer <access_token>"
 // @Success 200 {object} model.Response
 // @Router /rents [get] // Updated the router path to get all rents
 func (h *rentHandler) GetAllRent(c echo.Context) error {
@@ -152,7 +152,7 @@ func (h *rentHandler) GetAllRent(c echo.Context) error {
 // @Tags rents
 // @Accept json
 // @Produce json
-// @Authorization header string true "Bearer <access_token>"
+// @Param Authorization header string true "Bearer <access_token>"
 // @Success 201 {object} model.Response
 // @Router /rents [post] // Updated the router path to use POST method
 func (h *rentHandler) CreateRent(c echo.Context) error {
@@ -251,7 +251,7 @@ func (h *rentHandler) CreateRent(c echo.Context) error {
 // @Tags rents
 // @Accept json
 // @Produce json
-// @Authorization header string true "Bearer <access_token>"
+// @Param Authorization header string true "Bearer <access_token>"
 // @Param id path int true "Rent ID"
 // @Success 200 {object} model.Response
 // @Router /rents/return/{id} [put]
