# handler/user_handler.go
@@ -38,8 +38,7 @@ func NewUserHandler(userRepo repository.UserRepository) UserHandler {
 // @Tags users
 // @Accept json
 // @Produce json
-// @Authorization header string true "Bearer <access_token>"
-// @Param id path int true "User ID"
+// @Param Authorization header string true "Bearer <access_token>"
 // @Success 200 {object} model.Response
 // @Router /users/me [get]
 func (h *userHandler) GetUserByID(c echo.Context) error {
@@ -92,9 +91,9 @@ func (h *userHandler) GetUserByID(c echo.Context) error {
 // @Tags users
 // @Accept json
 // @Produce json
-// @Param user body model.User true "User object"
+// @Param user body model.UserRegister true "User object"
 // @Success 201 {object} model.Response
-// @Router /users [post]
+// @Router /users/register [post]
 func (h *userHandler) CreateUser(c echo.Context) error {
 
 	user := new(model.User)
@@ -117,7 +116,7 @@ func (h *userHandler) CreateUser(c echo.Context) error {
 	if err != nil {
 		return c.JSON(http.StatusInternalServerError, model.Response{
 			Status:  http.StatusInternalServerError,
-			Message: err.Error(),
+			Message: "Failed to create user, maybe email already exists",
 		})
 	}
 
@@ -135,7 +134,7 @@ func (h *userHandler) CreateUser(c echo.Context) error {
 // @Tags users
 // @Accept json
 // @Produce json
-// @Param user body model.User true "User object"
+// @Param user body model.UserLogin true "User object"
 // @Success 200 {object} model.Response
 // @Router /users/login [post]
 func (h *userHandler) LoginUser(c echo.Context) error {
@@ -215,7 +214,7 @@ func (h *userHandler) LoginUser(c echo.Context) error {
 // @Tags users
 // @Accept json
 // @Produce json
-// @Authorization header string true "Bearer <refresh_token>"
+// @Param Authorization header string true "Bearer <access_token>"
 // @Success 200 {object} model.Response
 // @Router /users/refresh-token [post] // Updated the router path to use POST method
 func (h *userHandler) RefreshToken(c echo.Context) error {
@@ -315,10 +314,9 @@ func GenerateTokens(user *model.User) (string, string, error) {
 // @Tags users
 // @Accept json
 // @Produce json
-// @Authorization header string true "Bearer <access_token>"
-// @Param user body model.User true "User object"
+// @Param Authorization header string true "Bearer <access_token>"
 // @Success 200 {object} model.Response
-// @Router /users/{id} [put] // Updated the router path to include user ID
+// @Router /users/me [put] // Updated the router path to include user ID
 func (h *userHandler) UpdateUser(c echo.Context) error {
 	userID := c.Get("user_id")
 	if userID == nil {
